# atk-training-nitesh-fastpsq

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: static_change.yml
atk_training_nitesh_fastapipsq/: __init__.py  database.py  main.py  models.py  schema.py
atk_training_nitesh_fastapipsq/templates/: speech.html  table.html
